force-app/main/default/objects/leankor__ValueStreamCategoryStatistic__c/leankor__ValueStreamCategoryStatistic__c.object-meta.xml
<CustomObject>
    <description>This is the object that contains the records of board (ValueStream) statistics per category (Kanban Card Template)</description>
    <label>Value Stream Category Statistic</label>
    <nameField>
        <displayFormat>VCS-{0000000000}</displayFormat>
        <label>Value Stream Category Statistic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Category Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>