force-app/main/default/objects/leankor__ValueStreamCategoryStatistic__c/fields/leankor__KanbanCardTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a field reference to the category (Kanban Card Template)</description>
    <inlineHelpText>This is a field reference to the category</inlineHelpText>
    <label>Category</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Value Stream Category Statistics</relationshipLabel>
    <relationshipName>ValueStreamCategoryStatistics_KT</relationshipName>
    <type>Lookup</type>
</CustomField>