force-app/main/default/objects/leankor__ValueStreamCategoryStatistic__c/fields/leankor__ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ScheduleDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>This field contains Schedule Run Date for every board on per day basis</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains Schedule Run Date for every board on per day basis</inlineHelpText>
    <label>Schedule Run Date</label>
    <type>Date</type>
</CustomField>