force-app/main/default/objects/leankor__ValueStreamCategoryStatistic__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a field reference to the project board/gantt (ValueStream)</description>
    <inlineHelpText>This is a field reference to the project board/gantt</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Value Stream Category Statistics</relationshipLabel>
    <relationshipName>ValueStreamCategoryStatistics_VS</relationshipName>
    <type>Lookup</type>
</CustomField>